--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "framer-motion": "10.12.16",
-    "next": "14.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^16.1.3",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "resend": "^6.7.0",
     "sonner": "^2.0.7",
     "tailwindcss": "^3.4.14"
